virt/krun-sys/src/bindings.rs

unsafe extern "C" {
    #[doc = " Enables and configures a virtio-gpu device.\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"virgl_flags\" - flags to pass to virglrenderer.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_gpu_options(ctx_id: u32, virgl_flags: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Enables and configures a virtio-gpu device. This variant allows specifying\n the size of the host window (acting as vRAM in the guest).\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"virgl_flags\" - flags to pass to virglrenderer.\n  \"shm_size\"    - size of the SHM host window in bytes.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_gpu_options2(ctx_id: u32, virgl_flags: u32, shm_size: u64) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure a display output for the VM.\n\n Note that to have display output a display backend must also be set (see krun_set_display_backend).\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"width\"       - the width of the window/display\n  \"height\"      - the height of the window/display\n\n Returns:\n  The id of the display (0 to KRUN_MAX_DISPLAYS - 1) on success or a negative error number on failure."]
    pub fn krun_add_display(ctx_id: u32, width: u32, height: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure a custom EDID blob for a display\n\n This replaces the generated EDID with a custom one. Configuring an EDID blob makes all display parameters except\n width and height ignored.\n\n Note that libkrun doesn't do any checks if the EDID matches the width/height specified in krun_add_display().\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"display_id\"  - the ID of the display (range: 0 to KRUN_MAX_DISPLAYS - 1)\n  \"edid_blob\"   - the EDID blob\n  \"blob_size\"   - the size of the blob in bytes\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_display_set_edid(
        ctx_id: u32,
        display_id: u32,
        edid_blob: *const u8,
        blob_size: usize,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure DPI of the display reported to the guest\n\n This overrides the DPI set by krun_set_display_dpi()\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"display_id\"  - the ID of the display (range: 0 to KRUN_MAX_DISPLAYS - 1)\n  \"dpi\"         - DPI (PPI) dots/pixels per inch of the display\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_display_set_dpi(ctx_id: u32, display_id: u32, dpi: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure physical size of the display reported to the guest\n\n This overrides the physical size of the display set by krun_set_display_physical_size()\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"display_id\"  - the ID of the display (range: 0 to KRUN_MAX_DISPLAYS - 1)\n  \"width_mm\"    - width of the display in millimeters\n  \"height_mm\"   - height of the display in millimeters\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_display_set_physical_size(
        ctx_id: u32,
        display_id: u32,
        width_mm: u16,
        height_mm: u16,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure refresh rate for a display\n\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"display_id\"  - the ID of the display (range: 0 to KRUN_MAX_DISPLAYS - 1)\n  \"refresh_rate\" - refresh rate (in Hz)\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_display_set_refresh_rate(ctx_id: u32, display_id: u32, refresh_rate: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures a krun_display_backend struct to be used for display output. (see libkrun_display.h)\n\n Arguments:\n  \"ctx_id\"          - the configuration context ID\n  \"display_backend\" - Pointer to a krun_display_backend struct\n  \"backend_size\"    - sizeof() the krun_display_backend struct\n\n Returns:\n  Zero on success or a negative error number (errno) on failure."]
    pub fn krun_set_display_backend(
        ctx_id: u32,
        display_backend: *const ::core::ffi::c_void,
        backend_size: usize,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds an input device with separate config and events objects.\n\n Arguments:\n  \"ctx_id\"               - the configuration context ID\n  \"config_backend\"       - Pointer to a krun_input_config struct\n  \"config_backend_size\"  - sizeof() the krun_input_config struct\n  \"events_backend\"       - Pointer to a krun_input_event_provider struct\n  \"events_backend_size\"  - sizeof() the krun_input_event_provider struct\n\n Returns:\n  Zero on success or a negative error code otherwise."]
    pub fn krun_add_input_device(
        ctx_id: u32,
        config_backend: *const ::core::ffi::c_void,
        config_backend_size: usize,
        events_backend: *const ::core::ffi::c_void,
        events_backend_size: usize,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " Creates a passthrough input device from a host /dev/input/* file descriptor.\n The device configuration will be automatically queried from the host device using ioctls.\n\n Arguments:\n  \"ctx_id\"  - The krun context\n  \"input_fd\" - File descriptor to a /dev/input/* device on the host\n\n Returns:\n  Zero on success or a negative error code otherwise."]
    pub fn krun_add_input_device_fd(
        ctx_id: u32,
        input_fd: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    #[doc = " Enables or disables a virtio-snd device.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n  \"enable\" - boolean indicating whether virtio-snd should be enabled or disabled.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_snd_device(ctx_id: u32, enable: bool) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures a map of rlimits to be set in the guest before starting the isolated binary.\n\n Arguments:\n  \"ctx_id\"  - the configuration context ID.\n  \"rlimits\" - an array of string pointers with format \"RESOURCE=RLIM_CUR:RLIM_MAX\".\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_rlimits(ctx_id: u32, rlimits: *const *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the SMBIOS OEM Strings.\n\n Arguments:\n  \"ctx_id\"      - the configuration context ID.\n  \"oem_strings\" - an array of string pointers. Must be terminated with an additional NULL pointer.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_smbios_oem_strings(
        ctx_id: u32,
        oem_strings: *const *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the working directory for the executable to be run inside the microVM.\n\n Arguments:\n  \"ctx_id\"        - the configuration context ID.\n  \"workdir_path\"  - the path to the working directory, relative to the root configured with\n                    \"krun_set_root\".\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_workdir(ctx_id: u32, workdir_path: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the path to the executable to be run inside the microVM, the arguments to be passed to the\n executable, and the environment variables to be configured in the context of the executable.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"exec_path\" - the path to the executable, relative to the root configured with \"krun_set_root\".\n  \"argv\"      - an array of string pointers to be passed as arguments.\n  \"envp\"      - an array of string pointers to be injected as environment variables into the\n                context of the executable. If NULL, it will auto-generate an array collecting the\n                the variables currently present in the environment.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_exec(
        ctx_id: u32,
        exec_path: *const ::core::ffi::c_char,
        argv: *const *const ::core::ffi::c_char,
        envp: *const *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the path to the firmware to be loaded into the microVM.\n\n Arguments:\n  \"ctx_id\"        - the configuration context ID.\n  \"firmware_path\" - the path to the firmware, relative to the host's filesystem.\n\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_firmware(ctx_id: u32, firmware_path: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the path to the kernel to be loaded in the microVM.\n\n Arguments:\n  \"ctx_id\"        - the configuration context ID.\n  \"kernel_path\"   - the path to the kernel, relative to the host's filesystem.\n  \"kernel_format\" - the kernel format.\n  \"initramfs\"     - the path to the initramfs, relative to the host's filesystem.\n  \"cmdline\"       - the kernel command line.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_kernel(
        ctx_id: u32,
        kernel_path: *const ::core::ffi::c_char,
        kernel_format: u32,
        initramfs: *const ::core::ffi::c_char,
        cmdline: *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets environment variables to be configured in the context of the executable.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"envp\"      - an array of string pointers to be injected as environment variables into the\n                context of the executable. If NULL, it will auto-generate an array collecting the\n                the variables currently present in the environment.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_env(ctx_id: u32, envp: *const *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Sets the file path to the TEE configuration file. Only available in libkrun-sev.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"filepath\"  - a null-terminated string representing file path to the TEE config file.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_set_tee_config_file(ctx_id: u32, filepath: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds a port-path pairing for guest IPC with a process in the host.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"port\"      - a vsock port that the guest will connect to for IPC.\n  \"filepath\"  - a null-terminated string representing the path of the UNIX\n                socket in the host."]
    pub fn krun_add_vsock_port(
        ctx_id: u32,
        port: u32,
        c_filepath: *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Adds a port-path pairing for guest IPC with a process in the host.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"port\"      - a vsock port that the guest will connect to for IPC.\n  \"filepath\"  - a null-terminated string representing the path of the UNIX\n                socket in the host.\n  \"listen\"    - true if guest expects connections to be initiated from host side"]
    pub fn krun_add_vsock_port2(
        ctx_id: u32,
        port: u32,
        c_filepath: *const ::core::ffi::c_char,
        listen: bool,
    ) -> i32;
}
